--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "markdown-it-meta": "^0.0.1",
     "transliteration": "^2.2.0",
     "vuepress": "^1.9.7"
+  },
+  "dependencies": {
+    "vuepress-plugin-baidu-tongji-analytics": "^1.0.2"
   }
 }
