--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vuepress": "^1.9.7"
   },
   "dependencies": {
+    "@vssue/api-github-v3": "^1.4.7",
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "vuepress-plugin-baidu-tongji-analytics": "^1.0.2"
   }
 }
