--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: npm install && npm run build
         BUILD_DIR: docs/.vuepress/dist/
-        CNAME: www.joshwong.cn
+        CNAME: www.wangzhenxi.com
