--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vssue/api-github-v3": "^1.4.7",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "vuepress-plugin-baidu-tongji-analytics": "^1.0.2",
+    "vuepress-plugin-robots": "^1.0.1",
     "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
