--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/wangzhenxi/wangzhenxi.github.io#readme",
   "devDependencies": {
-    "markdown-it-plantuml": "^1.4.1",
     "vitepress": "^1.6.4"
+  },
+  "dependencies": {
+    "@vitepress-plugin/markmap": "^1.3.1"
   }
 }
